chore: rebuild images using bitnami upstream

--- a/services/keycloak-db/Dockerfile
+++ b/services/keycloak-db/Dockerfile
@@ -1,17 +1,10 @@
-ARG UPSTREAM_REPO
-ARG UPSTREAM_TAG
-FROM ${UPSTREAM_REPO:-uselagoon}/mariadb-10.6:${UPSTREAM_TAG:-latest}
+FROM bitnami/mysql:8.0.34
 
 ARG LAGOON_VERSION
 ENV LAGOON_VERSION=$LAGOON_VERSION
 
-ENV MARIADB_DATABASE=keycloak \
-    MARIADB_USER=keycloak \
-    MARIADB_PASSWORD=keycloak \
-    MARIADB_CHARSET=utf8 \
-    MARIADB_COLLATION=utf8_general_ci
-
-COPY my_query-cache.cnf /etc/mysql/conf.d/my_query-cache.cnf
-USER root
-RUN fix-permissions /etc/mysql/conf.d/
-USER mysql
+ENV ALLOW_EMPTY_PASSWORD=yes \
+    MYSQL_USER=keycloak \
+    MYSQL_PASSWORD=keycloak \
+    MYSQL_DATABASE=keycloak \
+    MYSQL_AUTHENTICATION_PLUGIN=mysql_native_password
