--- a/services/keycloak-db/Dockerfile
+++ b/services/keycloak-db/Dockerfile
@@ -5,6 +5,8 @@ ENV LAGOON_VERSION=$LAGOON_VERSION
 
 ENV ALLOW_EMPTY_PASSWORD=yes \
     MYSQL_USER=keycloak \
-    MYSQL_PASSWORD=keycloak \
     MYSQL_DATABASE=keycloak \
-    MYSQL_AUTHENTICATION_PLUGIN=mysql_native_password
+    MYSQL_AUTHENTICATION_PLUGIN=mysql_native_password \
+    DB_VOLUME_DIR=/var/lib/mysql
+
+    RUN sed -i 's/export MYSQL_PASSWORD="${MYSQL_PASSWORD:-}"/export MYSQL_PASSWORD="${MARIADB_PASSWORD:-keycloak}"/g' /opt/bitnami/scripts/mysql-env.sh
