--- a/services/keycloak/Dockerfile
+++ b/services/keycloak/Dockerfile
@@ -58,7 +58,7 @@ ENV TMPDIR=/tmp \
     KEYCLOAK_ADMIN_PASSWORD=admin \
     KEYCLOAK_REALM=lagoon \
     KEYCLOAK_REALM_ROLES=admin \
-    DB_VENDOR=mariadb \
+    DB_VENDOR=mysql \
     DB_ADDR=keycloak-db \
     DB_USER=keycloak \
     DB_PASSWORD=keycloak \
@@ -69,7 +69,7 @@ ENV TMPDIR=/tmp \
     KEYCLOAK_API_CLIENT_SECRET=39d5282d-3684-4026-b4ed-04bbc034b61a \
     KEYCLOAK_AUTH_SERVER_CLIENT_SECRET=f605b150-7636-4447-abd3-70988786b330 \
     KEYCLOAK_SERVICE_API_CLIENT_SECRET=d3724d52-34d1-4967-a802-4d178678564b \
-    LAGOON_DB_VENDOR=mariadb \
+    LAGOON_DB_VENDOR=mysql \
     LAGOON_DB_DATABASE=infrastructure \
     LAGOON_DB_USER=api \
     LAGOON_DB_PASSWORD=api \
